--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game-socket-server",
   "version": "1.0.0",
   "description": "realtime game server",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,5 +12,8 @@
     "express": "^4.13.3",
     "node-uuid": "^1.4.7",
     "socket.io": "^1.4.0"
+  },
+  "engines": {
+    "node": "4.2.4"
   }
 }
