--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.3",
+    "node-gameloop": "^0.1.0",
     "node-uuid": "^1.4.7",
     "socket.io": "^1.4.0"
   },
