--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game-socket-server",
   "version": "1.0.0",
   "description": "realtime game server",
-  "main": "app.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
